# nvit

./: .gitignore  LICENSE.txt  LICENSES.md  README.md  THIRD_PARTY.txt  docker_launcher.ps1  docker_launcher.sh  justfile  launcher.sh  model.py  pyproject.toml  run_profiles.sh  settings.yaml
docker/: Dockerfile  build.ps1  build.sh  entrypoint.sh  run.ps1  run.sh
nvit/: debug.py  kohonen.py  model.py  train.py
profiles/: nvit0_k0.env  nvit1_k0.env  nvit1_k1.env
vga_nvit/: train.py
